--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swiper": "^8.1.4"
   },
   "devDependencies": {
     "autoprefixer": "10.3.4",
@@ -39,6 +40,7 @@
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-hover-media-feature": "1.0.1",
     "postcss-preset-env": "6.7.0",
+    "pure-react-carousel": "^1.28.1",
     "tailwindcss": "2.2.15"
   }
 }
